--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 [dependencies]
 maud = "0.26.0"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.132"
 tiny_http = "0.12.0"
